@@ -1,4 +1,5 @@
 0.2:
+- Linux OpenAL fixes (music plays now as stereo)
 - Fuel giveaway bug fixed, from steve@blckknght.org
 - Starmap fuel range calculator and actual consumption matches now
 - Collision detection is now pixel-perfect (fixes Sa-Matra, BUTT missile, etc)
